--- a/client/.gitignore
+++ b/client/.gitignore
@@ -4,7 +4,6 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
@@ -22,3 +21,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+/node_modules
+/dist
+/.turbo
+.vscode
+.env.local
+.env.*.local
+.DS_Store
+npm-debug.log
+package-lock.json
