--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "reactflow": "^11.11.4"
   },
   "devDependencies": {
